# ai-opt-demo

./: .gitignore  LICENSE  README.md
apps/: CMakeLists.txt  README.md
apps/demo1/: CMakeLists.txt  main.cpp  tc.cpp  tc.h  test_amx.cpp  test_avx512.cpp  test_avx512.cpp.bak  test_cpu.cpp  test_mem.cpp  test_omp.cpp  test_simd_avx.cpp  test_simd_common.cpp  test_simd_common.h  test_simd_sse.cpp  test_sse.cpp
apps/perf-sample/: CMakeLists.txt
apps/tmp/: CMakeLists.txt  main.cpp
apps/tp1/: CMakeLists.txt  main.cpp
bertlarge/: README.md  run_squad.py  s.py
gptj/: README.md  demo1.ipynb  demo4.ipynb  icx-demo1.ipynb  icx-demo2.ipynb  icx-demo3.ipynb  icx-demo4.ipynb  run_generation-2.py  run_generation.py  run_generation_ipex_llm_test.py  spr-demo1.ipynb  spr-demo2.ipynb  spr-demo4.ipynb
ipex/: ipex-demo-1.ipynb  s.py  s2.py
nlp/: bertlarge.ipynb  gpt2.ipynb  gptj.ipynb  t.ipynb  t.py
parallel/: s_ddp.py  s_dp.py
performance/emon/: demo1.xlsx  readme.txt  utils.py
resnet50/: README.md  chap01.py  chap02.py  chap03.py  chap04.py  chap05.py  chap06.py  demo.ipynb  demo2.ipynb  demo3.ipynb  regu00.py  regu01.py  regu02.py
s/: s1.py
utils/: README.md  demo_sweep.sh  ec.sh  objinsp.py  p.ipynb  parse_emon.py  parse_to_excel.py  r.pickle  run_mutil_case_2.sh  t.sh  test_parse_emon.py
wsf/llm/common/: dp.py  prompt.json  setup-2.sh  setup.sh
wsf/llm/workspace/: run_test.sh  run_test_deepspeed.sh  settings.sh
wsf/llm/workspace-v2.1/: run_generation_m.py  run_test.sh  run_test_general.sh  run_test_m.sh  settings.sh
wsf/llm/workspace-v2.1/distributed/: run_distributed.sh  run_distributed_accuracy.sh
wsf/llm/workspace-v2.1/single_instance/: run_accuracy.sh  run_single_instance.sh
